Fix for whitespace error, alerts are replaced with modals

--- a/src/components/input/_input.component.scss
+++ b/src/components/input/_input.component.scss
@@ -128,6 +128,7 @@ div.autocomplete {
 	bottom: 0;
 
 	.kyc-option {
+		white-space: pre;
 
 		strong{
 			font-family: var(--primary-font);
